# whisper-vamp-plugin

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: vamp-plugin-packager.cmake
docs/: whisper-manual.md
resource/: About.txt  ircamwhisper.cat  macos-build.sh  publish-all.sh  whisper.cat  whisper.cpp-fe36c90.patch
source/: wvp.cpp  wvp.h  wvp_model.h
test/: m10_row_spoken.ptldoc  whisper.ptldoc
